# GraphClust

./: AUTHORS  ChangeLog  GraphClust.pm  GraphClust_config.pm  GraphClust_config.pm.in  MASTER_GraphClust.pl  Makefile.am  Makefile.in  NEWS  README  README.md  Renviron_config  alignCenter.pl  alignCenter.sge  ari.m  clusterQuality.sh  configure  configure.ac  fastCluster.NSPDK.sge  fasta2shrep_gspan.pl  fasta2shrep_gspan.sge  foldFasta.pl  gc_cmsearch.pl  gc_cmsearch.sge  gc_jobscript.sge  gc_results_cluster.pl  getAdditionalScores.pl  getAdditionalScoresLocal.pl  glob_results.pl  glob_times.pl  graphClust_AlignRange.pl  graphClust_AlignRange.sge  graphFasta.pl  gspanGroups.NSPDK.sge  libtool  matrixClass.pl  matrixSignificance.R  rnaclustScores2Dist.pl  treeClass.pl
Array/: Makefile.am  Makefile.in
Docker/: Dockerfile  run.sh
NSPDK_src/: BaseGraphClass.cc  BaseGraphClass.h  GraphClass.cc  GraphClass.h  Histogram.cc  Histogram.h  Makefile.am  Makefile.in  NSPDK.cc  NSPDK_FeatureGenerator.cc  NSPDK_FeatureGenerator.h  README  TODO  Utility.cc  Utility.h  vectors.cpp  vectors.h
Statistics/: Makefile.am  Makefile.in
examples/: config.default_global
galaxy_wrappers/CMFinder/: alifold.pl
galaxy_wrappers/CollectResults/: aggregate_align_metrics.py  clustal_to_alma.py  extract_conservation_metrics.py  gc_align_clusters.pl  gc_res.pl  gc_res_noalign.pl  glob_res.pl
galaxy_wrappers/GSPAN/: fasta2shrep_gspan.pl  structure_2_gspan.pl
galaxy_wrappers/LocARNAGraphClust/: foldFasta.pl  locARNAGraphClust.pl  mloc2stockholm.pl  scoreAln.pl
galaxy_wrappers/NSPDK/: NSPDK_candidateClusters.pl  NSPDK_sparseVect.pl
galaxy_wrappers/PrepareForMlocarna/: newpreMlocarna.pl
galaxy_wrappers/Preprocessing/: preprocessing.pl
m4/: openmp1.m4
pgma_src/: Makefile.am  Makefile.in  README  pgma.cc  pgma_aux.cc  pgma_aux.hh
